--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="./style.css" />
     <title>Introduction to CSS Lab</title>
     <!-- Your code here! -->
   </head>
 
   <body>
+    
 
     <div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
